tests/networkfirewall/networkfirewallconfig/01-config-create-general-policy.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-1: general-policy CR created in kro-system with full defaults baseline;
# label auto-injected by controller label operator (KRO-224).
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: general-policy
  namespace: kro-system
  labels:
    aws.kropath.run/resource-name: general-policy
spec:
  mandatory:
    deleteProtection: false
    firewallPolicyChangeProtection: false
    subnetChangeProtection: false
    encryptionType: ""
    statefulRuleOrder: ""
    statefulDefaultActions: []
    streamExceptionPolicy: ""
    loggingDestination: {}
    namingTemplate: ""
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    deleteProtection: true
    firewallPolicyChangeProtection: true
    subnetChangeProtection: true
    encryptionType: "AWS_OWNED_KMS_KEY"
    statefulRuleOrder: "STRICT_ORDER"
    statefulDefaultActions:
      - "aws:drop_strict"
    streamExceptionPolicy: "DROP"
    loggingDestination: {}
    namingTemplate: "{namespace}-{name}"
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
