tests/networkfirewall/networkfirewallconfig/14-config-naming-template.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-14 (happy-path): effectiveConfig.defaults.namingTemplate = "{namespace}-{name}".
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: naming-config
  namespace: networkfirewallconfig
  labels:
    aws.kropath.run/resource-name: naming-config
spec:
  mandatory:
    namingTemplate: ""
    statefulDefaultActions: []
  defaults:
    namingTemplate: "{namespace}-{name}"
    statefulDefaultActions: []
