tests/networkfirewall/networkfirewallconfig/15-config-pci-profile.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-15 (happy-path): PCI governance profile accepted with full mandatory tier set.
# mandatory.deleteProtection=true, encryptionType=CUSTOMER_KMS, statefulRuleOrder=STRICT_ORDER,
# streamExceptionPolicy=DROP, alertLogDestination to S3.
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: pci
  namespace: networkfirewallconfig
  labels:
    aws.kropath.run/resource-name: pci
spec:
  mandatory:
    deleteProtection: true
    firewallPolicyChangeProtection: true
    subnetChangeProtection: true
    encryptionType: "CUSTOMER_KMS"
    statefulRuleOrder: "STRICT_ORDER"
    statefulDefaultActions: []
    streamExceptionPolicy: "DROP"
    loggingDestination:
      alertLogDestination:
        type: "S3"
        destination:
          bucketName: "pci-audit"
    namingTemplate: ""
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    deleteProtection: false
    firewallPolicyChangeProtection: false
    subnetChangeProtection: false
    encryptionType: ""
    statefulRuleOrder: ""
    statefulDefaultActions: []
    streamExceptionPolicy: ""
    loggingDestination: {}
    namingTemplate: "{namespace}-{name}"
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
