tests/networkfirewall/networkfirewallconfig/16-config-tag-merge.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-16 (happy-path): effectiveConfig merges mandatory.tags from NetworkFirewallConfig
# and KropathConfig. defaults.tags preserved separately.
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: tags-config
  namespace: networkfirewallconfig
  labels:
    aws.kropath.run/resource-name: tags-config
spec:
  mandatory:
    deleteProtection: false
    firewallPolicyChangeProtection: false
    subnetChangeProtection: false
    encryptionType: ""
    statefulRuleOrder: ""
    statefulDefaultActions: []
    streamExceptionPolicy: ""
    loggingDestination: {}
    namingTemplate: ""
    tags:
      nfw-managed: "true"
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    deleteProtection: false
    firewallPolicyChangeProtection: false
    subnetChangeProtection: false
    encryptionType: ""
    statefulRuleOrder: ""
    statefulDefaultActions: []
    streamExceptionPolicy: ""
    loggingDestination: {}
    namingTemplate: "{namespace}-{name}"
    tags:
      team: security
    syncedLabels: {}
    syncedAnnotations: {}
