tests/networkfirewall/networkfirewallconfig/17-config-synced-labels.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-17 (happy-path): mandatory.syncedLabels in effectiveConfig;
# RGD applies compliance:pci as both K8s label (aws.kropath.run/compliance: pci) and cloud tag.
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: synced-labels-config
  namespace: networkfirewallconfig
  labels:
    aws.kropath.run/resource-name: synced-labels-config
spec:
  mandatory:
    deleteProtection: false
    firewallPolicyChangeProtection: false
    subnetChangeProtection: false
    encryptionType: ""
    statefulRuleOrder: ""
    statefulDefaultActions: []
    streamExceptionPolicy: ""
    loggingDestination: {}
    namingTemplate: ""
    tags: {}
    syncedLabels:
      compliance: pci
    syncedAnnotations: {}
  defaults:
    deleteProtection: false
    firewallPolicyChangeProtection: false
    subnetChangeProtection: false
    encryptionType: ""
    statefulRuleOrder: ""
    statefulDefaultActions: []
    streamExceptionPolicy: ""
    loggingDestination: {}
    namingTemplate: "{namespace}-{name}"
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
